made fixed footer, and changed some CSS to fix unusual spacing

--- a/src/sass/Navigation.scss
+++ b/src/sass/Navigation.scss
@@ -1,15 +1,14 @@
 .navigation {
 	display: flex;
 	justify-content: flex-end;
-	padding: 0 100px;
 	transition: 0.2s ease-in;
-	margin-bottom: 40px;
-
+	margin-bottom: 20px;
+	
 	background: #141618;
 	a {
 		color: white;
 		text-decoration: none;
-		padding: 30px 20px;
+		padding: 0px 30px;
 
 		span {
 			display: inline-block;
