--- a/src/sass/Products.scss
+++ b/src/sass/Products.scss
@@ -3,4 +3,5 @@
 	flex-wrap: wrap;
 	justify-content: space-around;
 	margin: 0 auto;
+	padding-bottom: 80px;
 }
