--- a/src/sass/ShoppingCart.scss
+++ b/src/sass/ShoppingCart.scss
@@ -1,6 +1,5 @@
 .shopping-cart {
 	display: block;
-	margin: 0 auto;
 	width: 1000px;
 	background: white;
 	border-radius: 5px;
@@ -16,6 +15,7 @@
 		display: flex;
 		order: -2;
 		padding: 30px 0 0 30px;
+		margin-bottom: 40px;
 
 		img {
 			width: 100px;
@@ -50,26 +50,35 @@
 	}
 
 	&__checkout {
-		margin: 30px 0;
 		border-top: 1px solid lightgray;
-		padding: 20px 30px;
+		padding: 5px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		background: #141618;
 		color: white;
 
-		button {
+		position: fixed;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+
+		a {
 			border: 1px solid white;
 			background: transparent;
 			border-radius: 5px;
 			padding: 10px;
+			margin: 0px 30px;
 			color: white;
 
 			&:hover {
 				background: black;
 				color: white;
 			}
+		}
+
+		p{
+			margin: 0px 30px;
 		}
 	}
 }
